service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitops-service
  namespace: java-app
spec:
  selector:
    app: gitops
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
