ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-ingress
  namespace: java-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: weuweuweu.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitops-service
                port:
                  number: 8080
